--- a/widget/src/css/Layout.css
+++ b/widget/src/css/Layout.css
@@ -95,23 +95,24 @@
   outline: none;
 }
 
-.or-review-global-error-wrapper {
-  background-color: rgba(0, 0, 0, 0.64);
+
+.or-review-global-status{
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 32100;
-  overflow: hidden;
-  cursor: pointer;
-}
-.or-review-global-error {
-  position: relative;
-  margin: auto;
-  margin-top: 15%;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   padding: 1em;
-  background-color: #e6492d;
   color: #ffffff;
   font-weight: bold;
+  z-index: 32100;
+  overflow: hidden;
 }
+
+.or-review-global-error{
+  background-color: #e6492d;
+}
+
+.or-review-global-success{
+  background-color: #2de63c;
+}
+
