--- a/widget/src/css/ReviewFilters.css
+++ b/widget/src/css/ReviewFilters.css
@@ -1,6 +1,6 @@
 .or-review-filters-toggle-button {
-  width: 26px;
-  height: 17px;
+  width: 30px;
+  height: 25px;
   border: none;
   padding: 0;
   cursor: pointer;
@@ -37,6 +37,7 @@
   border-radius: 5px;
   border: none;
   margin-right: 0.75em;
+  margin-bottom: 0.75em;
   padding: 5px;
   cursor: pointer;
   background-color: #f5f5f5;
@@ -46,6 +47,6 @@
   outline: none;
 }
 
-.or-review-filter-button-active {
+.or-review-filter-button-active, .or-review-filter-button:hover {
   background-color: #d5d5d5;
 }
