--- a/widget/src/css/MetadataTags.css
+++ b/widget/src/css/MetadataTags.css
@@ -1,8 +1,18 @@
 .or-review-tags {
-  font-size: 1.125em;
+  font-size: 16px;
   white-space: nowrap;
+  display: flex;
+  margin-bottom: 16px;
 }
 
 .or-review-tag {
   display: block;
+  border-radius: 4px;
+  border: 1px solid black;
+  margin-left: 8px;
+  padding: 4px 8px;
+}
+
+.or-review-tag:first-child {
+  margin-left: 0px;
 }
