--- a/widget/src/css/ReviewFilters.css
+++ b/widget/src/css/ReviewFilters.css
@@ -36,6 +36,7 @@
 .or-review-filter-button {
   border-radius: 5px;
   border: none;
+  font-size: 14px;
   margin-right: 0.75em;
   margin-bottom: 0.75em;
   padding: 5px;
