--- a/widget/src/css/Layout.css
+++ b/widget/src/css/Layout.css
@@ -14,9 +14,9 @@
 
 .or-review-id {
   display: flex;
+  align-items: center;
 }
 .or-review-name-wrapper {
-  padding: 8px;
   margin-left: 8px;
 }
 
