--- a/widget/src/css/MetadataTags.css
+++ b/widget/src/css/MetadataTags.css
@@ -1,5 +1,5 @@
 .or-review-tags {
-  font-size: 16px;
+  font-size: 14px;
   white-space: nowrap;
   display: flex;
   margin-bottom: 16px;
@@ -8,7 +8,7 @@
 .or-review-tag {
   display: block;
   border-radius: 4px;
-  border: 1px solid black;
+  background-color: rgb(245, 245, 245);
   margin-left: 8px;
   padding: 4px 8px;
 }
