--- a/widget/template-widget-example.ejs
+++ b/widget/template-widget-example.ejs
@@ -32,7 +32,7 @@
   <div id="root">
     <h1>Welcome to the Open Reviews Widget Example</h1>
     <h2>Reviews of Example.com</h2>
-    <div class="or-review" data-sub="https://example.com" data-title="https://example.com">
+    <div class="or-review" data-sub="https://example.com" data-title="https://example.com" data-language="selector">
     </div>
   </div>
 
