--- a/widget/src/css/Layout.css
+++ b/widget/src/css/Layout.css
@@ -12,6 +12,10 @@
   background-color: #ffffff;
 }
 
+.or-review-icon {
+  margin-left: -4px;
+}
+
 .or-review-id {
   display: flex;
   align-items: center;
@@ -20,8 +24,7 @@
   margin-left: 8px;
 }
 
-.or-review-datetime{
-  margin-left: 8px;
+.or-review-datetime{  
   font-size: 14px;
   margin-bottom: -4px;
 }
