--- a/widget/src/css/MetadataTags.css
+++ b/widget/src/css/MetadataTags.css
@@ -10,7 +10,8 @@
   border-radius: 4px;
   background-color: rgb(245, 245, 245);
   margin-left: 8px;
-  padding: 4px 8px;
+  padding: 2px 4px;
+  font-size: 12px;
 }
 
 .or-review-tag:first-child {
